fixed title not showing on mobile device

--- a/follow-me/src/App.css
+++ b/follow-me/src/App.css
@@ -12,10 +12,8 @@ body {
 }
 
 .title h1 {
-  font-size: 90px;
-  background: linear-gradient(90deg, #86c232 0%, #61892f 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  font-size: 50px;
+  color: #86c232;
 }
 
 .footer {
@@ -29,7 +27,6 @@ body {
 @media only screen and (max-width: 650px) {
   body,
   .title,
-  .title h1,
   .footer {
     font-size: 35px;
     display: flex;
